--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,22 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.1'
+}
+dependencies {
+    testCompile group: 'org.testng', name: 'testng', version: '7.0.0'
     implementation 'org.testng:testng:6.9.6'
 }
+dependencies {
+    compile group: 'org.apache.poi', name: 'poi', version: '3.17'
 
+}
+dependencies {
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
+}
+dependencies {// https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
+    compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.7.1'
+}
 test{
     useTestNG()
 }
